--- a/gb/17/5/25/n9183275.md
+++ b/gb/17/5/25/n9183275.md
@@ -1,16 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/klgej2021/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/klgej2021/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/klgej2021/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/klgej2021/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/klgej2021/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/klgej2021/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/klgej2021/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/klgej2021/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/klgej2021/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/klgej2021/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/klgej2021/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/klgej2021/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/klgej2021/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/klgej2021/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/klgej2021/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/klgej2021/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/klgej2021/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/klgej2021/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/klgej2021/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/klgej2021/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/klgej2021/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/klgej2021/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/klgej2021/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/klgej2021/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>27岁金宇彬罹癌！鼻咽癌风险、症状有哪些？</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2017/01/170124203412100649-600x400.jpg" />
-<h6>27岁的韩星金宇彬，24日忽由经纪公司宣布罹患鼻咽癌、正在治疗中。（newsis提供）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2017年05月25日讯】（大纪元记者陈洁云综合报导）因韩剧《继承者们》走红的27岁韩星<ahref="https://github.com/klgej2021/djy/blob/master/gb/tag/%E9%87%91%E5%AE%87%E5%BD%AC.md#1">金宇彬</a>，昨（24）日<span style="color: #008000;"><a style="color: #008000;" href="https://github.com/klgej2021/djy/blob/master/gb/17/5/24/n9178015.md#1" target="_blank" rel="noopener noreferrer">惊传罹患鼻咽癌</a></span>。<ahref="https://github.com/klgej2021/djy/blob/master/gb/tag/%E9%87%91%E5%AE%87%E5%BD%AC.md#1">金宇彬</a>去年在与秀智合演的电视剧《任意依恋》中，饰演一位得了绝症的大明星，如今现实中竟真的罹癌，让人感慨太巧合。</p>
-<p>据韩国媒体报导，金宇彬在近些日子常觉喉咙肿痛、流鼻血，去医院做了精密检查后，确诊罹患<ahref="https://github.com/klgej2021/djy/blob/master/gb/tag/%E9%BC%BB%E5%92%BD%E7%99%8C.md#1">鼻咽癌</a>。</p>
-<p><ahref="https://github.com/klgej2021/djy/blob/master/gb/tag/%E9%BC%BB%E5%92%BD%E7%99%8C.md#1">鼻咽癌</a>是少数几种治愈率较高的恶性肿瘤之一，特别是及早发现的鼻咽癌，治愈率达90%以上。对于风险人群来说，定期筛检、发现<ahref="https://github.com/klgej2021/djy/blob/master/gb/tag/%E6%97%A9%E6%9C%9F%E7%97%87%E7%8A%B6.md#1">早期症状</a>后及时就医，是非常重要的。</p>
-<p>很多人知道，抽烟是咽喉癌和鼻咽癌的一个致病因素。过去金宇彬拍摄时尚杂志时，就曾手持香烟做出迷濛的表情。此番不幸罹癌，也让人联想到他“瘾君子”的造型。除此之外，鼻咽癌还有哪些风险因素呢？高危人群又应留意哪些<ahref="https://github.com/klgej2021/djy/blob/master/gb/tag/%E6%97%A9%E6%9C%9F%E7%97%87%E7%8A%B6.md#1">早期症状</a>？</p>
-<figure id="attachment_5788222" style="width: 500px" class="wp-caption aligncenter"><img class="wp-image-5788222" src="https://i.epochtimes.com/assets/uploads/2014/10/141022215637985-450x300.jpg" alt="专家称，除了肺癌，吸烟还会导致鼻咽癌、口腔癌、食道癌，甚至膀胱癌、肾癌、胰腺癌和胃癌等。（fotolia）" width="500" b="333" /><figcaption class="wp-caption-text">除了肺癌，吸烟还会导致鼻咽癌、口腔癌、食道癌，甚至膀胱癌、肾癌、胰腺癌和胃癌等。(Fotolia)</figcaption></figure>
+<p>【大纪元2017年05月25日讯】（大纪元记者陈洁云综合报导）因韩剧《继承者们》走红的27岁韩星<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%91%E5%AE%87%E5%BD%AC.md#1">金宇彬</a>，昨（24）日<span style="color: #008000;"><a style="color: #008000;" href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/24/n9178015.md#1" target="_blank" rel="noopener noreferrer">惊传罹患鼻咽癌</a></span>。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%91%E5%AE%87%E5%BD%AC.md#1">金宇彬</a>去年在与秀智合演的电视剧《任意依恋》中，饰演一位得了绝症的大明星，如今现实中竟真的罹癌，让人感慨太巧合。</p>
+<p>据韩国媒体报导，金宇彬在近些日子常觉喉咙肿痛、流鼻血，去医院做了精密检查后，确诊罹患<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%BC%BB%E5%92%BD%E7%99%8C.md#1">鼻咽癌</a>。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%BC%BB%E5%92%BD%E7%99%8C.md#1">鼻咽癌</a>是少数几种治愈率较高的恶性肿瘤之一，特别是及早发现的鼻咽癌，治愈率达90%以上。对于风险人群来说，定期筛检、发现<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%A9%E6%9C%9F%E7%97%87%E7%8A%B6.md#1">早期症状</a>后及时就医，是非常重要的。</p>
+<p>很多人知道，抽烟是咽喉癌和鼻咽癌的一个致病因素。过去金宇彬拍摄时尚杂志时，就曾手持香烟做出迷濛的表情。此番不幸罹癌，也让人联想到他“瘾君子”的造型。除此之外，鼻咽癌还有哪些风险因素呢？高危人群又应留意哪些<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%A9%E6%9C%9F%E7%97%87%E7%8A%B6.md#1">早期症状</a>？</p>
+<figure id="attachment_5788222" aria-describedby="caption-attachment-5788222" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/10/141022215637985-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-5788222" src="https://i.epochtimes.com/assets/uploads/2014/10/141022215637985-450x300.jpg" alt="专家称，除了肺癌，吸烟还会导致鼻咽癌、口腔癌、食道癌，甚至膀胱癌、肾癌、胰腺癌和胃癌等。（fotolia）" width="500" b="333" /></a><figcaption id="caption-attachment-5788222" class="wp-caption-text">除了肺癌，吸烟还会导致鼻咽癌、口腔癌、食道癌，甚至膀胱癌、肾癌、胰腺癌和胃癌等。(Fotolia)</figcaption></figure>
 <h2><span style="color: #008000;">鼻咽癌的风险因素</span></h2>
 <p>据美国癌症协会（<span class="st">American Cancer Society, </span>ACS）网站，鼻咽癌的风险因素包括下面八项：</p>
 <p><strong>一、性别：</strong>男性罹患鼻咽癌的概率是女性的两至三倍。</p>
@@ -25,7 +24,7 @@
 <p>鼻咽癌（NPC）在美国不多见，而要对鼻咽癌作出早期诊断，迄今都没有简单且非侵入性的体检方法或血液检查方法，所以多数美国医生都不建议患者做筛检（注：筛检是针对没有症状的人群）。</p>
 <p>但在部分亚洲地区，包括中国在内，鼻咽癌发病率较高，筛查也更为经常。特别是如果感染EB病毒（比鼻咽癌常见得多），或者家中有鼻咽癌患者，就要定期检查鼻咽和颈部。</p>
 <h2><span style="color: #008000;">鼻咽癌的早期症状</span></h2>
-<figure style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-5804078" src="https://i.epochtimes.com/assets/uploads/2014/11/141128154049985-450x362.jpg" alt="感冒老不好，小心鼻咽癌。（fotolia）" width="450" b="362" /><figcaption class="wp-caption-text">如单耳长期肿胀闷塞，且不是由感冒引起，要小心鼻咽癌。(Fotolia)</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/11/141128154049985-450x362.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-5804078" src="https://i.epochtimes.com/assets/uploads/2014/11/141128154049985-450x362.jpg" alt="感冒老不好，小心鼻咽癌。（fotolia）" width="450" b="362" /></a><figcaption class="wp-caption-text">如单耳长期肿胀闷塞，且不是由感冒引起，要小心鼻咽癌。(Fotolia)</figcaption></figure>
 <p>对多数鼻咽癌患者来说，在发展到一定阶段前不会有什么明显症状。如果患者出现早期症状后及时就医，鼻咽癌的治愈率可以非常高。这些症状看起来和鼻咽可能没什么关系，比如长期单侧耳塞。以下就来逐一介绍。</p>
 <p><strong>? 颈部有肿块</strong></p>
 <p>四个鼻咽癌患者中，有三人在首次就医时会诉称颈部有肿块。很可能是颈部两侧都长有一些肿块，并向后侧发展。肿块通常硬结但无痛感。这是癌细胞扩散到颈部引起的淋巴结肿大。健康人的淋巴结通常小于豌豆大小。</p>
@@ -47,49 +46,48 @@
 <strong><span style="color: #757575;"> ??原因不明的消瘦</span></strong></p>
 <p>如果您有以上身体变化，并担心是鼻咽癌的早期症状，应及时就医。医生会询问这些症状出现了多久，以便发现症结，进行相应的检查和诊断。</p>
 <p>洛杉矶耳鼻喉科医师蔡维伦告诉大纪元，鼻咽癌总体上治疗成功率非常高，只要找到病因，不管是第一期还是第四期（末期），八九成患者都会得到成功的治疗。#</p>
-<p>参阅?<span style="color: #058742;"><strong><a style="color: #058742;" href="https://github.com/klgej2021/djy/blob/master/gb/ncid1163369.md#1">“感官杀手”头颈癌！</a></strong></span></p>
+<p>参阅?<span style="color: #058742;"><strong><a style="color: #058742;" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid1163369.md#1">“感官杀手”头颈癌！</a></strong></span></p>
 <p>责任编辑：茉莉</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/13/11/12/n4009240.md#1">耳朵不适 小心为鼻咽癌警讯</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/13/12/23/n4041340.md#1">鼻子过敏 鼻咽癌风险恐增近两倍</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/14/6/9/n4174272.md#1">高中生未沾烟酒  罹鼻咽癌三期</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/15/2/16/n4368307.md#1">鼻塞打喷嚏两个月 竟发现罹鼻咽癌</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/16/8/20/n8219688.md#1">鼻咽癌 中国人特有的癌症</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/16/12/29/n8644189.md#1">《偷天对决》韩国上映 空降首周票房冠军</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/17/1/27/n8753144.md#1">为什么鼻咽癌80%发生在华人身上？</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/17/1/27/n8753213.md#1">鼻咽癌放疗后，会影响生育吗？</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/17/3/8/n8886563.md#1">中大破解鼻咽癌全基因组图谱</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/17/4/27/n9082827.md#1">流鼻血是鼻咽癌征兆？医师解析</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/12/n4009240.md#1">耳朵不适 小心为鼻咽癌警讯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/12/23/n4041340.md#1">鼻子过敏 鼻咽癌风险恐增近两倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4174272.md#1">高中生未沾烟酒  罹鼻咽癌三期</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/2/16/n4368307.md#1">鼻塞打喷嚏两个月 竟发现罹鼻咽癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/20/n8219688.md#1">鼻咽癌 中国人特有的癌症</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/12/29/n8644189.md#1">《偷天对决》韩国上映 空降首周票房冠军</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/1/27/n8753144.md#1">为什么鼻咽癌80%发生在华人身上？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/1/27/n8753213.md#1">鼻咽癌放疗后，会影响生育吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/8/n8886563.md#1">中大破解鼻咽癌全基因组图谱</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/27/n9082827.md#1">流鼻血是鼻咽癌征兆？医师解析</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/1/n11356564.md#1" target="_blank">共产暴政录：三区叛乱和侵华日军攻势协调进行</a></li><li><a href="https://github.com/klgej2021/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/5/n11026306.md#1" target="_blank">冰天雪地 瑞典法轮功学员传真相 感动民众</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/31/n11835336.md#1" target="_blank">王赫：庚子年首月 中共地动山摇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284211.md#1" target="_blank">中国良心教师们的故事（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/16/n12190320.md#1">中印冲突印方升至20死 消息：中方43人伤亡</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/16/n12189414.md#1">中印边境冲突升级 两军至少8死11伤</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/16/n12190064.md#1">新发地内部员工披露实情 为三文鱼喊冤</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/16/n12190650.md#1">【新闻看点】蓬杨会前 美5重拳北京信息乱</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/17/n12191954.md#1">中印两军黑暗中搏斗6小时 印指挥官坠峡死</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/15/n12185955.md#1">余苑绮抗癌路艰辛 进行肝手术 网友打气</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/14/n12185206.md#1">与刘诗诗是否生二胎？吴奇隆的回应感动网友</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/14/n12185250.md#1">被认为唱太好反得低分 歌手丁当呛节目评审</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/15/n12187794.md#1">老婆小孩谁最重要？吴奇隆回答获赞EQ超高</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/16/n12190137.md#1">第二波疫情下的北京影院人：真活不下去了</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/15/n12186774.md#1">因封城变清澈 土耳其湖下4世纪教堂重见天日</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/2/n12153788.md#1">纵横破解：预言与人生 （上）</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/8/5/30/n2136550.md#1">富丽奇巧凡尔赛宫──巴洛克建筑</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/12/n12181432.md#1">【佳人传】如兰胜雪 才女张玉娘的凄婉传奇</a></li>
-<li><a href="https://github.com/klgej2021/djy/blob/master/gb/20/6/5/n12162913.md#1">鬼魂跨阴阳界显灵  向长官鸣冤讨公道</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/8/n11641181.md#1">【医案】老天的考卷</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/klgej2021/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/klgej2021/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/5/25/n9183275.htm">27岁金宇彬罹癌！鼻咽癌风险、症状有哪些？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/5/25/n9183275.htm">27岁金宇彬罹癌！鼻咽癌风险、症状有哪些？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/klgej2021/djy/blob/master/gb/17/5/25/n9183275.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/klgej2021/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/klgej2021/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/klgej2021/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/klgej2021/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/klgej2021/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/5/25/n9183275.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
